Closed Bug 1811475 Opened 3 years ago Closed 3 years ago

Perma [tier 2] ld.lld: error: undefined hidden symbol: mozilla::widget::ScreenHelperGTK::GetScreenForWindow(nsWindow*)

Categories

(Core :: Widget: Gtk, defect, P5)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- unaffected
firefox110 --- fixed
firefox111 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: nfay [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=403001870&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/bWgD2c04QLOno5GdtCvpRQ/runs/0/artifacts/public/logs/live_backing.log


[task 2023-01-20T12:12:11.609Z] 12:12:11     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/library/gtest'
[task 2023-01-20T12:12:11.611Z] 12:12:11     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -Qunused-arguments -std=gnu++17 -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror  -shared -Wl,-z,defs -Wl,--gc-sections -Wl,-h,libxul.so -o libxul.so /builds/worker/workspace/obj-build/toolkit/library/gtest/libxul_so.list   -lpthread -fuse-ld=lld -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/lib/x86_64-linux-gnu -Wl,-rpath-link,/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -Wl,-z,noexecstack -Wl,-z,text -Wl,-z,relro -Wl,-z,nocopyreloc -Wl,-Bsymbolic-functions -Wl,--build-id=sha1 -fstack-protector-strong -fstack-clash-protection -Wl,-rpath-link,/builds/worker/workspace/obj-build/dist/bin -Wl,-rpath-link,/usr/local/lib  ../../../security/nss/lib/crmf/crmf_crmf/libcrmf.a ../../../js/src/build/libjs_static.a /builds/worker/workspace/obj-build/x86_64-unknown-linux-gnu/release/libgkrust_gtest.a ../../../security/sandbox/linux/libmozsandbox.so ../../../config/external/nspr/pr/libnspr4.so ../../../config/external/nspr/libc/libplc4.so ../../../config/external/nspr/ds/libplds4.so ../../../config/external/lgpllibs/liblgpllibs.so ../../../security/nss/lib/nss/nss_nss3/libnss3.so ../../../security/nss/lib/util/util_nssutil3/libnssutil3.so ../../../security/nss/lib/smime/smime_smime3/libsmime3.so ../../../config/external/sqlite/libmozsqlite3.so ../../../security/nss/lib/ssl/ssl_ssl3/libssl3.so ../../../widget/gtk/mozgtk/libmozgtk.so -Wl,--version-script,symverscript  -ldl  -lasound -lrt -lm -ldl -lX11 -lXcomposite -lXdamage -lXext -lXfixes -lXrandr -lXrender -lXtst -lpthread -lc -L/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu -lfreetype -lfontconfig -lgtk-3 -lgdk-3 -lpangocairo-1.0 -lpango-1.0 -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -ldbus-glib-1 -ldbus-1 -lxcb-shm -lX11-xcb -lxcb -lXcursor -lXi -Wl,--version-script,/builds/worker/checkouts/gecko/build/unix/stdc++compat/hide_std.ld
[task 2023-01-20T12:12:11.611Z] 12:12:11    ERROR -  ld.lld: error: undefined hidden symbol: mozilla::widget::ScreenHelperGTK::GetScreenForWindow(nsWindow*)
[task 2023-01-20T12:12:11.611Z] 12:12:11     INFO -  >>> referenced by nsWindow.cpp:7263 (/builds/worker/checkouts/gecko/widget/gtk/nsWindow.cpp:7263)
[task 2023-01-20T12:12:11.612Z] 12:12:11     INFO -  >>>               /builds/worker/workspace/obj-build/toolkit/library/gtest/../../../widget/gtk/nsWindow.o:(nsWindow::GetWidgetScreen())
[task 2023-01-20T12:12:11.612Z] 12:12:11    ERROR -  clang-15: error: linker command failed with exit code 1 (use -v to see invocation)
[task 2023-01-20T12:12:11.612Z] 12:12:11    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:540: libxul.so] Error 1
[task 2023-01-20T12:12:11.612Z] 12:12:11     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/library/gtest'
[task 2023-01-20T12:12:11.612Z] 12:12:11     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2023-01-20T12:12:11.612Z] 12:12:11     INFO -  gmake[4]: Target 'target' not remade because of errors.
[task 2023-01-20T12:12:11.613Z] 12:12:11    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: toolkit/library/gtest/target] Error 2
[task 2023-01-20T12:18:25.625Z] 12:18:25     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/library/rust'
Flags: needinfo?(emilio)
Assignee: nobody → emilio

Set release status flags based on info from the regressing bug 1805939

Flags: needinfo?(emilio)

No review, trivial change.

Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox110 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Comment on attachment 9313261 [details]
Bug 1811475 - Fix a pre-existing x11-only build issue.

Beta/Release Uplift Approval Request

  • User impact if declined: Trivial build fix.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial patch, build only effectively.
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9313261 - Flags: approval-mozilla-beta?

Comment on attachment 9313261 [details]
Bug 1811475 - Fix a pre-existing x11-only build issue.

Approved for 110 beta 5, thanks.

Attachment #9313261 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Follow up fix for a duplicated #endif statement in the uplift causing build bustage:
https://hg.mozilla.org/releases/mozilla-beta/rev/74630a41bc13cf11bfb5aacb0519b00de277847e

Backed out changeset 74630a41bc13 as uplifing Bug 1811475 to beta was not needed a=backout
Backed out changeset 33bf4bd0b799 as uplifting Bug 1811475 to beta was not needed a=backout
https://hg.mozilla.org/releases/mozilla-beta/rev/02d40ffb1e0abb096d54070afffd9ce65b690d6f
https://hg.mozilla.org/releases/mozilla-beta/rev/6687a2e0b313473b519069376157c3763b87eb4f

The uplifts here depended on changes that landed in 111 in bug 1805939 (causing the build bustage), so we don't need to uplift this.
Marling as wontfix for beta and release as this is P5/S4 and uplifting bug 1805939 was not requested.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: