Bug 1811475 - Fix a pre-existing x11-only build issue.  a=pascalc

No review, trivial change.

Differential Revision: https://phabricator.services.mozilla.com/D167383